[package]
name = "sample_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
image = { version = "0.24.7", features = ["png", "jpeg"] }

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa.git"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu"]
